--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,60 +1,48 @@
-@charset "utf-8";
-
-/**
- * markdown.css
- *
- * This program is free software: you can redistribute it and/or modify it under
- * the terms of the GNU Lesser General Public License as published by the Free
- * Software Foundation, either version 3 of the License, or (at your option) any
- * later version.
- *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
- * details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with this program. If not, see http://gnu.org/licenses/lgpl.txt.
- *
- * @project      Weblog and Open Source Projects of Florian Wolters
- * @version      GIT: $Id$
- * @package      xhtml-css
- * @author       Florian Wolters <florian.wolters.85@googlemail.com>
- * @copyright    2012 Florian Wolters
- * @cssdoc       version 1.0-pre
- * @license      http://gnu.org/licenses/lgpl.txt GNU Lesser General Public License
- * @link         http://github.com/FlorianWolters/jekyll-bootstrap-theme
- * @media        all
- * @valid        true
- */
-
-img {
-  max-width: 100%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote {
+  margin: 0;
+  padding: 0;
 }
-
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-table,
-th,
-td {
-  border: 1px solid #eaeaea;
-  border-radius: 3px;
-  padding: 5px;
-}
-
-tr:nth-child(even) {
-  background-color: #f8f8f8;
-}
-
 body {
-  font-family: Helvetica, Arial, Freesans, clean, sans-serif;
-  padding: 1em;
-  margin: auto;
-  max-width: 42em;
-  background: #fefefe;
+  font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial,
+    sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #737373;
+  background-color: white;
+  margin: 10px 13px 10px 13px;
+}
+table {
+  margin: 10px 0 15px 0;
+  border-collapse: collapse;
+}
+td,
+th {
+  border: 1px solid #ddd;
+  padding: 3px 10px;
+}
+th {
+  padding: 5px 10px;
+}
+
+a {
+  color: #0069d6;
+}
+a:hover {
+  color: #0050a3;
+  text-decoration: none;
+}
+a img {
+  border: none;
+}
+p {
+  margin-bottom: 9px;
 }
 
 h1,
@@ -63,85 +51,110 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: bold;
+  color: #404040;
+  line-height: 36px;
 }
-
 h1 {
-  color: #000000;
-  font-size: 28px;
+  margin-bottom: 18px;
+  font-size: 30px;
 }
-
 h2 {
-  border-bottom: 1px solid #cccccc;
-  color: #000000;
   font-size: 24px;
 }
-
 h3 {
   font-size: 18px;
 }
-
 h4 {
   font-size: 16px;
 }
-
 h5 {
   font-size: 14px;
 }
-
 h6 {
-  color: #777777;
-  background-color: inherit;
-  font-size: 14px;
+  font-size: 13px;
 }
-
 hr {
-  height: 0.2em;
+  margin: 0 0 19px;
   border: 0;
-  color: #cccccc;
-  background-color: #cccccc;
+  border-bottom: 1px solid #ccc;
 }
-
-p,
-blockquote,
-ul,
-ol,
-dl,
-li,
-table,
-pre {
-  margin: 15px 0;
+blockquote {
+  padding: 13px 13px 21px 15px;
+  margin-bottom: 18px;
+  font-family: georgia, serif;
+  font-style: italic;
 }
-
+blockquote:before {
+  content: "\201C";
+  font-size: 40px;
+  margin-left: -10px;
+  font-family: georgia, serif;
+  color: #eee;
+}
+blockquote p {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+  margin-bottom: 0;
+  font-style: italic;
+}
 code,
 pre {
-  border-radius: 3px;
-  background-color: #f8f8f8;
-  color: inherit;
+  font-family: Monaco, Andale Mono, Courier New, monospace;
 }
-
 code {
-  border: 1px solid #eaeaea;
-  margin: 0 2px;
-  padding: 0 5px;
+  background-color: #fee9cc;
+  color: rgba(0, 0, 0, 0.75);
+  padding: 1px 3px;
+  font-size: 12px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
-
 pre {
-  border: 1px solid #cccccc;
-  line-height: 1.25em;
-  overflow: auto;
-  padding: 6px 10px;
+  display: block;
+  padding: 14px;
+  margin: 0 0 18px;
+  line-height: 16px;
+  font-size: 11px;
+  border: 1px solid #d9d9d9;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
-
-pre > code {
-  border: 0;
-  margin: 0;
+pre code {
+  background-color: #fff;
+  color: #737373;
+  font-size: 11px;
   padding: 0;
 }
-
-a,
-a:visited {
-  color: #4183c4;
-  background-color: inherit;
-  text-decoration: none;
+sup {
+  font-size: 0.83em;
+  vertical-align: super;
+  line-height: 0;
+}
+* {
+  -webkit-print-color-adjust: exact;
+}
+@media screen and (min-width: 914px) {
+  body {
+    width: 854px;
+    margin: 10px auto;
+  }
+}
+@media print {
+  body,
+  code,
+  pre code,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: black;
+  }
+  table,
+  pre {
+    page-break-inside: avoid;
+  }
 }
