--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,8 +14,7 @@ body {
     sans-serif;
   font-size: 13px;
   line-height: 18px;
-  color: #737373;
-  background-color: white;
+  background-color: #f7ebd2;
   margin: 10px 13px 10px 13px;
 }
 table {
@@ -32,10 +31,10 @@ th {
 }
 
 a {
-  color: #0069d6;
+  color: #07889b;
 }
 a:hover {
-  color: #0050a3;
+  color: #07889b;
   text-decoration: none;
 }
 a img {
@@ -43,6 +42,16 @@ a img {
 }
 p {
   margin-bottom: 9px;
+  color: #e89087;
+}
+
+ul {
+  list-style-image: url("../assets/arrow.svg");
+}
+
+li,
+li a {
+  color: #e89087;
 }
 
 h1,
@@ -51,7 +60,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #404040;
+  color: #07889b;
   line-height: 36px;
 }
 h1 {
