--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,7 +14,7 @@ body {
     sans-serif;
   font-size: 13px;
   line-height: 18px;
-  background-color: #f7ebd2;
+  background-color: #ffe4ad;
   margin: 10px 13px 10px 13px;
 }
 table {
