--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ blockquote {
 body {
   font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial,
     sans-serif;
-  font-size: 13px;
+  font-size: 1rem;
   line-height: 18px;
   background-color: #f7ebd2;
   margin: 10px 13px 10px 13px;
