--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,7 +19,7 @@ blockquote,
 table,
 pre {
   margin: 15px 0;
-  line-height: 1.5;
+  line-height: 1.3;
 }
 
 body {
@@ -70,6 +70,10 @@ li a {
 li p {
   margin: 0;
   padding: 0;
+}
+
+li {
+  line-height: 1.3;
 }
 
 h1,
