--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 .title {
-  font-size: 36px;
+  font-size: 40px;
 }
 
 h1,
@@ -25,9 +25,9 @@ pre {
 body {
   font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial,
     sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 18px;
-  background-color: #f7ebd2;
+  background-color: #F2F2F2;
   margin: 10px 13px 10px 13px;
 }
 table {
@@ -55,7 +55,7 @@ a img {
 }
 p {
   margin-bottom: 9px;
-  color: #ed725a;
+  color: #5C008A;
 }
 
 ul {
@@ -68,7 +68,7 @@ li a {
 }
 
 li p {
-  margin: 0;
+  margin: .5em;
   padding: 0;
 }
 
