--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 .title {
   font-size: 40px;
+  margin: 30px;
+  text-align: center;
+  font-family: "Open Sans"
 }
 
 h1,
@@ -23,10 +28,8 @@ pre {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial,
-    sans-serif;
-  font-size: 1.2rem;
-  line-height: 18px;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 1.14rem;
   background-color: #F2F2F2;
   margin: 10px 13px 10px 13px;
 }
@@ -54,8 +57,10 @@ a img {
   border: none;
 }
 p {
-  margin-bottom: 9px;
+  margin-bottom: .7em;
   color: #5C008A;
+  text-indent: 3em;
+  line-height: 1.5em;
 }
 
 ul {
@@ -70,6 +75,7 @@ li a {
 li p {
   margin: .5em;
   padding: 0;
+  text-indent: 0;
 }
 
 li {
@@ -82,12 +88,14 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: "Lato", Arial, sans-serif;
   color: #07889b;
   line-height: 36px;
 }
 h1 {
   margin-bottom: 18px;
   font-size: 30px;
+  margin-top: 1.3em;
 }
 h2 {
   font-size: 24px;
