--- a/public/css/main.css
+++ b/public/css/main.css
@@ -180,6 +180,28 @@ sup {
     margin: 10px auto;
   }
 }
+
+/* smaller font on mobile */
+@media screen and (max-width: 640px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Lato", Arial, sans-serif;
+    color: #07889b;
+    line-height: 30px;
+  }
+  h1 {
+    margin-bottom: 18px;
+    font-size: 24px;
+    margin-top: 1.3em;
+  }
+  p {
+    font-size: .8em;
+  }
+}
 @media print {
   body,
   code,
