--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=Lato");
 .title {
-  color: #07889b;
+  color: #2A3D85;
   font-size: 40px;
   margin: 30px;
   text-align: center;
@@ -19,7 +19,7 @@ img::before {
 }
 
 strong {
-  /* color: #07889b; */
+  /* color: #2A3D85; */
   font-weight: bold;
 }
 
@@ -64,12 +64,12 @@ th {
 
 a {
   /* color: #1a1a1a; */
-  color: #07889b;
+  color: #2A3D85;
   font-weight: bold;
 }
 a:hover {
   /* color: #1a1a1a; */
-  color: #07889b;
+  color: #2A3D85;
   text-decoration: none;
 }
 a img {
@@ -87,7 +87,7 @@ ul {
 
 li a {
   /* color: #1a1a1a; */
-  color: #07889b;
+  color: #2A3D85;
   /* font-weight: bold; */
 }
 
@@ -108,7 +108,7 @@ h5,
 h6 {
   font-family: "Lato", Arial, sans-serif;
   line-height: 36px;
-  color: #e47325;
+  color: rgb(130, 153, 236);
 }
 h1 {
   margin-bottom: 18px;
@@ -208,7 +208,7 @@ sup {
   h5,
   h6 {
     font-family: "Lato", Arial, sans-serif;
-    color: #07889b;
+    color: #2A3D85;
     line-height: 30px;
   }
   h1 {
