Apply updates from virtual to master (#36)
* Update hacker-guide.md

* Added non-profit externship part to the hacker guide

* Added DS_Store to gitignore

* Updated With Workshops per the schedule

* Updated Style

* forgot link

* better link desc.

* Incomplete changes to mentor guide

* Some more edits

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Initial upload of discord bot images

* Delete Screen Shot 2020-07-04 at 1.02.53 AM.png

* Delete Screen Shot 2020-07-04 at 1.03.46 AM.png

* Delete Screen Shot 2020-07-04 at 1.03.57 AM.png

* Delete Screen Shot 2020-07-04 at 1.04.39 AM.png

* Added discord bot images

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Update mentor-guide.md

* Fix devpost links

* Edited a newer version of virtual branch

* Delete ticket_logs.png

* Delete individual_ticket_channel.png

* Delete ticket_commands.png

* Delete ticket_channels.png

* Re-added mentorship bot images

* Update mentor-guide.md

* Delete ticket_commands.png

* Delete ticket_logs.png

* Delete individual_ticket_channel.png

* Add files via upload

* Update mentor-guide.md

* Delete ticket_commands.png

* Add files via upload

* Deleted DS_Store files

* Fix image display

* Lint document and remove duplicated text

* Update mentor-guide.md

* Update mentor-guide.md

* Update index.html

* udpate vandyhacks titles

* Text changes for ticket bot

* Add files via upload

* Update hacker-guide.md

* remove mention of dms

* remove dm from mentor guide

* Initial draft for VH VII

* Update mentor-guide.md

* Update mentor-guide.md

* still needs revision from content and/or marketing and/or ops

* Update index.html

* Fix guide title

* customize to fall

* potentially fix table of contents

lmao

* remove tag inconsistencies

sigh

* Add favicon

* Updat

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,8 +2,12 @@
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=Lato");
+:root {
+  --main-text-dark: #2A3D85;
+}
+
 .title {
-  color: #2A3D85;
+  color: var(--main-text-dark);
   font-size: 40px;
   margin: 30px;
   text-align: center;
@@ -64,12 +68,12 @@ th {
 
 a {
   /* color: #1a1a1a; */
-  color: #2A3D85;
+  color: var(--main-text-dark);
   font-weight: bold;
 }
 a:hover {
   /* color: #1a1a1a; */
-  color: #2A3D85;
+  color: var(--main-text-dark);
   text-decoration: none;
 }
 a img {
@@ -87,7 +91,7 @@ ul {
 
 li a {
   /* color: #1a1a1a; */
-  color: #2A3D85;
+  color: var(--main-text-dark);
   /* font-weight: bold; */
 }
 
@@ -208,7 +212,7 @@ sup {
   h5,
   h6 {
     font-family: "Lato", Arial, sans-serif;
-    color: #2A3D85;
+    color: var(--main-text-dark);
     line-height: 30px;
   }
   h1 {
@@ -231,3 +235,14 @@ footer {
   padding: 15px 0;
 }
 
+.anchorjs-link {
+   color: #aaa;
+}
+
+.anchorjs-link:hover {
+  color: var(--main-text-dark);
+}
+
+*:hover > .anchorjs-link {
+  transition: color .2s linear;
+}
